+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.5.5?
===========================

*Release date: XX-XXX-20XX*

Library
-------

- Issue #5068: Fixed the tarfile._BZ2Proxy.read() method that would loop
  forever on incomplete input. That caused tarfile.open() to hang when used
  with mode 'r' or 'r:bz2' and a fileobj argument that contained no data or
  partial bzip2 compressed data.


What's New in Python 2.5.4?
===========================

*Release date: 23-Dec-2008*

Core and builtins
-----------------

- Issue #5389: Avoid potential for undefined variable 'startinpos' in
  PyUnicode_DecodeUTF7().

- Revert patch for #1706039, as it can crash the interpreter.

- Added test case to ensure attempts to read from a file opened for writing
  fail.


What's New in Python 2.5.3?
===========================

*Release date: 19-Dec-2008*


Build
-----

- In the OSX installer, update SQLite to 3.6.7, and change bsddb URL.
  Build against system Tcl framework.

What's New in Python 2.5.3c1?
=============================

*Release date: 13-Dec-2008*

Core and builtins
-----------------

- Issue #1706039: Support continued reading from a file even after 
  EOF was hit.

- Issue #1683: prevent forking from interfering in threading storage.

- Issue #4597: Fixed several opcodes that weren't always propagating
  exceptions.

- Issue #4589: Propagated an exception thrown by a context manager's
  __exit__ method's result while it's being converted to bool.

- Issue #4317: Fixed a crash in the imageop.rgb2rgb8() function.

- Issue #4230: If ``__getattr__`` is a descriptor, it now functions correctly.

- Issue #4048: The parser module now correctly validates relative imports.

- Issue #4176: Fixed a crash when pickling an object which ``__reduce__``
  method does not return iterators for the 4th and 5th items.

- Issue #3967: Fixed a crash in the count() and find() methods of string-like